# neuromast3d

./: .gitignore  LICENSE  README.md  fix_label_image_bg.py  membrane_segmentation.py  neuromast3d_env1.yml  nm_alignment_basic.py  nm_alignment_by_pca.py  nucleus_segmentation.py  prep_manifest.py  prep_single_cells_for_analysis.py  seg_model_zoo_batch.py  setup.cfg  shparam_alignment_test.py  test.py  tox.ini  utils.py
neuromast3d/: config.yaml  general_utils.py  run_neuromast3d.py  segmentation_config.yaml  step_utils.py
neuromast3d/alignment/: nm_alignment_basic.py  nm_alignment_by_pca.py  utils.py
neuromast3d/fix_labels/: fix_label_image_bg.py  utils.py
neuromast3d/misc/: find_closest_cells.py  sample_napari_keypress.py  seg_model_zoo_batch.py  split_channels.py  stackreg_script.py  try_shparam_alignment.py  utils.py
neuromast3d/prep_single_cells/: apply_manual_xy_rotation.py  create_fov_dataset.py  prep_single_cells.py  prep_single_cells_for_analysis.py  prep_single_cells_for_analysis_dual_channel.py  prep_single_cells_old_single_ch.py  utils.py
neuromast3d/segmentation/: dual_channel_annotator.py  membrane_segmentation.py  nucleus_segmentation.py  nucleus_segmentation_old.py  segmentation_config.yaml  utils.py
neuromast3d/visualization/: analysis.py  curate_fov.py  plotting_tools.py  rec_error.py  visualization.py
tests/: conftest.py  test_alignment.py  test_create_fov_dataset.py  test_pipeline.py  test_prep_single_cells.py  test_run_neuromast3d.py
