[metadata]
name = neuromast3d
version = 0.0.0
author = Madeleine Hewitt
description = Package for 3d shape analysis of neuromasts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raiblelab/neuromast3d
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >= 3.8, < 4
install_requires =
    numpy
    scipy
    pandas
    scikit-image
    scikit-learn
    napari
    matplotlib
    seaborn
    aicsimageio == 3.3.4
    aicsimageprocessing

[options.extras_require]
test = pytest
dev = flake8; pylint
demo = notebook

[options.entry_points]
console_scripts =
    run_neuromast3d = neuromast3d.run_neuromast3d:main
